k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gaffer-api
  namespace: gaffer
  labels:
    app: gaffer-api
spec:
  selector:
    app: gaffer-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
