k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaffer-api
  namespace: gaffer
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  rules:
    - host: api.thegaffer.io  # update for production domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaffer-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.thegaffer.io
      secretName: gaffer-tls
